--- a/Entorno/EntregaWeb-main/app/templates/app/base.html
+++ b/Entorno/EntregaWeb-main/app/templates/app/base.html
@@ -50,7 +50,7 @@
                 <a class="nav-link" href="{% url 'login'%}"> Iniciar Sesión</a>
               </li>
               <li> 
-                <a class="nav-link" href="{% url 'admin:index'%}"> Iniciar Sesión Administrador</a>
+                <a class="nav-link" href="{% url 'admin:index'%}"> Crear Usuario admin</a>
               </li>
               {% endif %}
             </ul>
