--- a/Entorno/EntregaWeb-main/app/templates/prod.html
+++ b/Entorno/EntregaWeb-main/app/templates/prod.html
@@ -11,13 +11,13 @@
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="{{ p.imagen.url }}" class="d-block w-100" alt="...">
+                        <img src="{{ product.imagen.url }}" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="{{ p.imagen.url }}" class="d-block w-100" alt="...">
+                        <img src="{{ product.imagen.url }}" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="{{ p.imagen.url }}" class="d-block w-100" alt="...">
+                        <img src="{{ product.imagen.url }}" class="d-block w-100" alt="...">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
@@ -31,13 +31,13 @@
             </div>
         </div>
         <div class="col-md-7">
-            <p class="newarrival text-center">{{ p.artista }}</p>
-            <h2>{{ p.nombreprod }}</h2>
-            <p class="price">${{ p.precio }}</p>
-            <p><b>{{ p.descripcion }}</b></p>
+            <p class="newarrival text-center">{{ product.artista }}</p>
+            <h2>{{ product.nombreprod }}</h2>
+            <p class="price">${{ product.precio }}</p>
+            <p><b>{{ product.descripcion }}</b></p>
             <label>Cantidad</label>
             <input type="text" value="1">
-            <a href="carrito.html"><button type="button" class="btn btn-primary">Añadir al carro</button></a>
+            <a href="{% url 'agregar_al_carrito' product.id %}"><button type="button" class="btn btn-primary">comprar</button></a>
         </div>
     </div>
 </div>
